review fix code readability and adjust color on hover

--- a/src/components/sq-tabs/sq-tabs.component.scss
+++ b/src/components/sq-tabs/sq-tabs.component.scss
@@ -15,4 +15,7 @@
       min-width: min-content;
     }
   }
+  li:hover {
+    color: var(--primary_color);
+  }
 }
